--- a/style.css
+++ b/style.css
@@ -21,3 +21,9 @@ body {
 .grid > div {
   background-color: bisque;
 }
+
+.grid > div:hover {
+  cursor: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/U%2B25CC.svg/120px-U%2B25CC.svg.png")
+      50 50,
+    auto;
+}
