--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
 
 .grid > div {
   background-color: bisque;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .grid > div:hover {
