Modify the page layout

--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@
 
 body {
   background-color: aliceblue;
+  display: grid;
+  grid-template-columns: 450px 1fr 400px;
+}
+
+header,
+footer {
+  grid-column: 1 / -1;
+  min-height: 100px;
+  background-color: cornsilk;
+}
+
+h1 {
+  text-align: center;
 }
 
 .grid {
@@ -15,7 +28,7 @@ body {
   grid-template-rows: repeat(3, 150px);
   justify-content: center;
   align-content: center;
-  min-height: 100vh;
+  display: inline-grid;
 }
 
 .grid > div {
